# Sber-tensor-compilers

./: .gitignore  README.md
lecture_hw_1/: .gitignore  CMakeLists.txt  README.md
lecture_hw_1/cmake/: generate_slr_tables.cmake
lecture_hw_1/docs/: lr0_automaton.md  slr_table.md
lecture_hw_1/include/: lexer.hpp  parser.hpp  slr_table.hpp  token.hpp
lecture_hw_1/lexer/: lexer.l
lecture_hw_1/src/: lexer.cpp  main.cpp  parser.cpp  slr_table.cpp
lecture_hw_1/tables/: action_table.csv  goto_table.csv
lecture_hw_1/tests/: parser_gtest.cpp  slr_table_generation_gtest.cpp  test_invalid.txt  test_invalid_identifier.txt  test_valid.txt  test_valid_precedence.txt
lecture_hw_2_IR/: graph_gen.cpp  ssa_generic_ir.mir
